Fix fullscreen on iOS

--- a/src/assets/styles/player.scss
+++ b/src/assets/styles/player.scss
@@ -75,17 +75,24 @@ $romper-background-color: #ccc;
   }
 }
 
-.fullscreen-container {
-  &.fullscreen-container-fullscreen {
+.romper-target {
+  height: 100%;
+  width: 100%;
+
+  &.romper-target-fullscreen {
+    background-color: $romper-background-color;
     bottom: 0;
     height: 100vh;
     left: 0;
-    position: absolute;
+    position: fixed;
     right: 0;
     top: 0;
     width: 100vw;
+    z-index: 1;
   }
 }
+
+
 
 .romper-player {
   color: $accent-colour;
@@ -102,7 +109,7 @@ $romper-background-color: #ccc;
     // Center Video Box
     margin-top: -28.125vw; // height/2
     position: absolute;
-    top: 50%;
+    top: 50vh;
     width: 100vw;
   }
 
@@ -350,7 +357,7 @@ $romper-background-color: #ccc;
     display: flex;
     height: 100%;
     max-height: 60px;
-    opacity: 1;
+    opacity: 0;
     position: absolute;
     transition: all 1s ease;
     width: 100%;
@@ -390,7 +397,7 @@ $romper-background-color: #ccc;
     max-height: 60px;
     opacity: 0;
     position: absolute;
-    width: 0%;
+    width: 100%;
 
     &.hide {
       display: hidden;
